update programs module to cater poster, links and recurring programs
